2004-05-14 David Anderson <davea@sgi.com>

      * print_die.c (print_die_and_children): Change to iteration
        on siblings (still recursing on children).

	
2004-03-30 David Anderson <davea@sgi.com>
      * dwarfdump.c (main): getopt() string should contain k:g
        not kg:    Thanks to Peter Seiderer for pointing this out.

2003-12-31 David Anderson <davea@sgi.com>
      * README: Added configure example.
      * Makefile.in: Removed bogus LIBS line, updated copyright date.
      * acconfig.h: Added LGPL copyright to match libdwarf
	Silly, but it matches libdwarf version boilerplate.
      * config.guess config.sub: new versions from automake-1.6.
      * config.h.in configure: Regenerated.


2003-10-06   David Anderson <davea@sgi.com>
     * dwarfdump.c print_sections.c: applied indent(1).
     * print_die.c: applied indent and added ; after
       invocations of macros PUSH_DIE_STACK POP_DIE_STACK SPACE
       as these were confusing indent a bit.
       The indent control file .indent.pro contained:
  	-bad -bap -nbbo -br -ce -brs
  	-l72  -lc72  -hnl  -nprs
  	-fca -i4  -lp -psl -npcs 
        


2003-10-02   David Anderson <davea@sgi.com>
     * dwarfdump.c: Add -g to indicate use of older 
       location entry code in libdwarf.  So dwarf_loclist 
       and dwarf_loclist_n are testable.
     * globals.h: Added use_old_dwarf_loclist flag so one
       can choose the old dwarf_loclist() interface.
       For testing.
     * print_die.c: Rearranged to avoid code duplication.
       Now supports .debug_loc fully.
     * print_sections.c: Prints .debug_loc now.

2003-09-29   David Anderson <davea@sgi.com>

      * print_die.c: with -v, print 'loclist' start and
	end addr and also a hint that DW_FORM_indirect is used.
        No change for normal output (for now).

2003-05-19   David Anderson <davea@sgi.com>
      * dwarfdump.c call dwarf_srcfiles() to get file names
        per cu and pass down to die print routines.