@@ -2,7 +2,6 @@ dnl Process this file with autoconf to produce a configure script.
 AC_INIT(libdwarf.h)
 AC_CONFIG_HEADER(config.h)
 
-dnl the endian one is temporary till endianness issues fixed
 AC_PROG_CC
 AC_C_BIGENDIAN
 AC_GCC_TRADITIONAL
@@ -14,19 +13,34 @@ dnl AC_ARFLAGS
 
 AC_CHECK_HEADERS(alloca.h elf.h elfaccess.h libelf.h libelf/libelf.h sgidefs.h sys/types.h sys/ia64/elf.h)
 
-AC_CHECK_LIB(elf,elf64_getehdr,AC_DEFINE(HAVE_ELF64_GETEHDR))
-AC_CHECK_LIB(elf,elf64_getshdr,AC_DEFINE(HAVE_ELF64_GETSHDR))
-AC_TRY_COMPILE( ,  __uint32_t p; p = 3; ,AC_DEFINE(HAVE___UINT32_T))
-AC_TRY_COMPILE( ,  __uint64_t p; p = 3; ,AC_DEFINE(HAVE___UINT64_T))
-AC_TRY_COMPILE([#include <sys/types.h>],[  __uint32_t p; p = 3;] ,AC_DEFINE(HAVE___UINT32_T_IN_SYS_TYPES_H))
+AC_CHECK_LIB(elf,elf64_getehdr,
+  AC_DEFINE(HAVE_ELF64_GETEHDR,1,
+	[Define to 1 if the elf64_getehdr function is in libelf.a.]))
+AC_CHECK_LIB(elf,elf64_getshdr,
+  AC_DEFINE(HAVE_ELF64_GETSHDR,1,
+	[Define to 1 if the elf64_getshdr function is in libelf.a.]))
+AC_TRY_COMPILE( ,  __uint32_t p; p = 3; ,AC_DEFINE(HAVE___UINT32_T,1,
+	[See if __uint32_t is predefined in the compiler.]))
+AC_TRY_COMPILE( ,  __uint64_t p; p = 3; ,AC_DEFINE(HAVE___UINT64_T,1,
+	[See if __uint64_t is predefined in the compiler.]))
+AC_TRY_COMPILE([#include <sys/types.h>],[  __uint32_t p; p = 3;] ,
+  AC_DEFINE(HAVE___UINT32_T_IN_SYS_TYPES_H,1,
+	[Define 1 if sys/types.h defines __uint32_t.]))
 dnl checking for ia 64 types, which might be enums, using HAVE_R_IA_64_DIR32LSB
 dnl to stand in for a small set.
-AC_TRY_COMPILE([#include <elf.h>],[  int p; p = R_IA_64_DIR32LSB;] ,AC_DEFINE(HAVE_R_IA_64_DIR32LSB))
+AC_TRY_COMPILE([#include <elf.h>],[  int p; p = R_IA_64_DIR32LSB;] ,
+  AC_DEFINE(HAVE_R_IA_64_DIR32LSB,1,
+	[Define 1 if  R_IA_64_DIR32LSB is defined (might be enum value).]))
 
-dnl Lets just assume, if ia64, compatibility with cygnus before
+dnl Just assume, if old ia64 R_IA_64_DIR32LSB name present, 
+dnl compatibility with cygnus before
 dnl HAVE_DWARF2_99_EXTENSION defined.
 dnl Only applies to producer code, as consumer adapts itself.
 dnl This is not the right test, really.
-AC_TRY_COMPILE([#include <elf.h>],[  int p; p = R_IA_64_DIR32LSB;] ,AC_DEFINE(HAVE_OLD_DWARF2_32BIT_OFFSET))
+AC_TRY_COMPILE([#include <elf.h>],[  int p; p = R_IA_64_DIR32LSB;] ,
+  AC_DEFINE(HAVE_OLD_DWARF2_32BIT_OFFSET,1,
+	[Define 1 if want to build with 32bit section offsets per dwarf2] ),
+  AC_DEFINE(HAVE_DWARF2_99_EXTENSION,1,
+	[Define 1 if want to build with 32/64bit section offsets per dwarf3] )) 
 
 AC_OUTPUT(Makefile)
